tdf#111924 - Special characters: don't lose focus on context menu

Don't lose focus on the favorite or recently used items in the special
characters dialog when right-clicking them to show the context menu..

Change-Id: Iaedc4bbc6fb627591b9c0cd9a2c44940312eeb1d